--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.velocitypackage</groupId>
-    <artifactId>WebGraphics</artifactId>
+    <artifactId>WebJ</artifactId>
     <version>0.0.1</version>
 
     <properties>
