--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
             <version>3.0.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webbitserver</groupId>
+            <artifactId>webbit</artifactId>
+            <version>0.4.15</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- io.netty.netty version:3.9.9.Final (3.10.x not supported)-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.9.9.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
