--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
@@ -21,9 +28,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.webbitserver</groupId>
+            <groupId>com.github.webbit</groupId>
             <artifactId>webbit</artifactId>
-            <version>0.4.15</version>
+            <version>v0.4.19</version>
             <scope>compile</scope>
         </dependency>
         <!-- io.netty.netty version:3.9.9.Final (3.10.x not supported)-->
