--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <version>1.0-alpha3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- Deploy -->
