--- a/pom.xml
+++ b/pom.xml
@@ -4,68 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- INFO -->
-    <groupId>com.velocitypackage</groupId>
-    <artifactId>webJ</artifactId>
-    <version>v0.1.1</version>
-    <packaging>jar</packaging>
+    <!-- Settings -->
+    <properties>
+        <project.java.version>15</project.java.version>
+        <project.version>v0.1.2</project.version>
+        <project.name>webJ</project.name>
+        <project.description>WebJ is a framework for building and host webpages.</project.description>
+    </properties>
+    <!-- Settings -->
 
-    <name>Java Web library</name>
-    <description>WebJ is a framework for building webpages.</description>
-    <url>https://github.com/VelocityPackage/webJ</url>
-    <!-- INFO -->
-
-    <!-- LICENCE -->
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <name>Max Mielchen</name>
-            <organization>VelocityPackage</organization>
-        </developer>
-        <developer>
-            <name>Marvin Mielchen</name>
-            <organization>VelocityPackage</organization>
-        </developer>
-    </developers>
-    <!-- LICENCE -->
-
-    <!-- SourceControl -->
-    <scm>
-        <connection>scm:git:git://github.com/VelocityPackage/webJ</connection>
-        <developerConnection>scm:git:ssh://github.com:VelocityPackage/webJ</developerConnection>
-        <url>https://github.com/VelocityPackage/webJ</url>
-    </scm>
-    <!-- SourceControl -->
-
-    <!-- VelocityPackage Central -->
-    <repositories>
-        <repository>
-            <id>package</id>
-            <name>VelocityPackage Maven Repository</name>
-            <url>https://central.velocitypackage.com/repository/package</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>archiva.internal</id>
-            <name>VelocityPackage Maven Repository</name>
-            <url>https://central.velocitypackage.com/repository/package</url>
-        </repository>
-        <snapshotRepository>
-            <id>archiva.snapshots</id>
-            <name>VelocityPackage Maven Repository</name>
-            <url>https://central.velocitypackage.com/repository/package</url>
-        </snapshotRepository>
-    </distributionManagement>
-    <!-- VelocityPackage Central -->
-
+    <!-- Dependencies  -->
     <dependencies>
         <dependency>
             <groupId>com.github.webbit</groupId>
@@ -86,6 +34,67 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <!-- Dependencies -->
+
+    <!-- Info -->
+    <groupId>com.velocitypackage</groupId>
+    <artifactId>${project.name}</artifactId>
+    <version>${project.version}</version>
+    <packaging>jar</packaging>
+
+    <name>${project.name}</name>
+    <description>${project.description}</description>
+    <url>https://github.com/VelocityPackage/${project.name}</url>
+    <!-- Info -->
+
+    <!-- SourceControl -->
+    <scm>
+        <connection>scm:git:git://github.com/VelocityPackage/${project.name}</connection>
+        <developerConnection>scm:git:ssh://github.com:VelocityPackage/${project.name}</developerConnection>
+        <url>https://github.com/VelocityPackage/${project.name}</url>
+    </scm>
+    <!-- SourceControl -->
+
+    <!-- LICENCE -->
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Max Mielchen</name>
+            <organization>VelocityPackage</organization>
+        </developer>
+        <developer>
+            <name>Marvin Mielchen</name>
+            <organization>VelocityPackage</organization>
+        </developer>
+    </developers>
+    <!-- LICENCE -->
+
+    <!-- VelocityPackage Central -->
+    <repositories>
+        <repository>
+            <id>package</id>
+            <name>VelocityPackage Central</name>
+            <url>https://central.velocitypackage.com/repository/package</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>https://central.velocitypackage.com/repository/package</url>
+        </repository>
+        <snapshotRepository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>https://central.velocitypackage.com/repository/package</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <!-- VelocityPackage Central -->
 
     <!-- Deploy -->
     <build>
@@ -95,8 +104,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>${project.java.version}</source>
+                    <target>${project.java.version}</target>
                     <encoding>utf8</encoding>
                 </configuration>
             </plugin>
