--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
     <!-- Deploy -->
     <build>
         <plugins>
+            <!-- JUnit Jupiter -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <!-- JUnit Jupiter -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
