--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test-windows:
+  test_windows:
     name: Test on Windows (Windows Server)
     runs-on: windows-latest
     steps:
@@ -21,7 +21,7 @@ jobs:
       - name: Test with Maven
         run: mvn clean test
 
-  test-linux:
+  test_linux:
     name: Test on Linux (Ubuntu)
     runs-on: ubuntu-latest
     steps:
@@ -35,7 +35,7 @@ jobs:
       - name: Test with Maven
         run: mvn clean test
 
-  test-macos:
+  test_macos:
     name: Test on MacOS
     runs-on: macos-latest
     steps:
