--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -1,4 +1,4 @@
-name: Junit
+name: JUnit
 
 on:
   push:
@@ -7,44 +7,23 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test_windows:
-    name: Test on Windows (Windows Server)
-    runs-on: windows-latest
+  test:
+    name: Test on ${{ matrix.os }} with java ${{ matrix.java-version }} from ${{ matrix.distribution }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+        java-version: ['8', '11', '16', '17', '18', '19']
+        distribution: ['temurin', 'zulu', 'adopt', 'adopt-openj9', 'liberica', 'microsoft', 'corretto']
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up ${{ matrix.java-version }} ${{ matrix.distribution }}
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Test with Maven
-        run: mvn clean test
-
-  test_linux:
-    name: Test on Linux (Ubuntu)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Test with Maven
-        run: mvn clean test
-
-  test_macos:
-    name: Test on MacOS
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Test with Maven
+          java-version: ${{ matrix.java-version }}
+          distribution: ${{ matrix.distribution }}
+          cache: 'maven'
+      - name: Basic Build
+        run: mvn clean package
+      - name: Run JUnit Tests
         run: mvn clean test
