--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        java-version: ['8', '11', '16', '17', '18', '19']
-        distribution: ['temurin', 'zulu', 'adopt', 'adopt-openj9', 'liberica', 'microsoft', 'corretto']
+        java-version: ['8', '11']
+        distribution: ['temurin', 'corretto']
     steps:
       - uses: actions/checkout@v3
       - name: Set up ${{ matrix.java-version }} ${{ matrix.distribution }}
