--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
           server-id: archiva.internal
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+      - name: Update version
+        run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
       - name: Deploy
         run: mvn clean deploy
         env:
